--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "En este proyecto creo mini tienda de libros con react y express usando typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "webpack serve --mode=development",
+    "build" : "webpack --mode=production"
   },
   "author": "MOSergi",
   "license": "ISC",
