--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "webpack serve --mode=development",
-    "build" : "webpack --mode=production"
+    "dev": "webpack serve --mode=development",
+    "build": "webpack --mode=production"
   },
   "author": "MOSergi",
   "license": "ISC",
@@ -28,6 +28,8 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0"
   }
 }
