--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "outDir": "build",
         "allowJs": true,
         "jsx": "react-jsx",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "moduleResolution": "Node"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
