--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,5 +8,6 @@
         "jsx": "react-jsx",
         "allowSyntheticDefaultImports": true,
         "moduleResolution": "Node"
-    }
+    },
+    "include": ["./customSvg.d.ts"]
 }
